--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "moment": "^2.24.0",
     "native-base": "^2.13.4",
     "react": "16.8.6",
     "react-native": "0.60.4",
+    "react-native-calendar-picker": "^6.0.1",
     "react-native-firebase": "^5.5.6",
     "react-native-gesture-handler": "^1.3.0",
     "react-navigation": "^3.11.1",
