--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "firebase": "^6.4.0",
     "moment": "^2.24.0",
     "native-base": "^2.13.4",
     "react": "16.8.6",
-    "react-native": "0.60.4",
+    "react-native": "0.60.5",
     "react-native-calendar-picker": "^6.0.1",
-    "react-native-firebase": "^5.5.6",
     "react-native-gesture-handler": "^1.3.0",
     "react-navigation": "^3.11.1",
     "react-redux": "^7.1.0",
@@ -24,9 +24,9 @@
     "@babel/core": "7.5.5",
     "@babel/runtime": "7.5.5",
     "@react-native-community/eslint-config": "0.0.3",
-    "babel-jest": "24.8.0",
+    "babel-jest": "24.9.0",
     "eslint": "6.1.0",
-    "jest": "24.8.0",
+    "jest": "24.9.0",
     "metro-react-native-babel-preset": "0.54.1",
     "react-test-renderer": "16.8.6"
   },
