--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "babel-jest": "24.9.0",
     "eslint": "6.1.0",
     "jest": "24.9.0",
-    "metro-react-native-babel-preset": "0.54.1",
+    "metro-react-native-babel-preset": "^0.54.1",
+    "react-native-dotenv": "^0.2.0",
     "react-test-renderer": "16.8.6"
   },
   "jest": {
