--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-API_KEY=AIzaSyBXgr-Tvww9KxyzkBNH2vFS5m7fStolhkY
-AUTH_DOMAIN=calendarapp-b4304.firebaseapp.com
-DATABASE_URL=https://calendarapp-b4304.firebaseio.com
-PROJECT_ID=calendarapp-b4304
-MESSAGING_SENDER_ID=506108125705
-APP_ID=1:506108125705:web:4b1b2bc44a48631d
+API_KEY=AIzaSyCJXnJxU-Mta94jfDRTINQG5_w9Ei47PHc
+AUTH_DOMAIN=rn-calendar-app.firebaseapp.com
+DATABASE_URL=https://rn-calendar-app.firebaseio.com
+PROJECT_ID=rn-calendar-app
+MESSAGING_SENDER_ID=598400197900
+APP_ID=1:598400197900:web:1a45bdb24cf4c4ef
