--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "AwesomeNativeBase",
-  "displayName": "AwesomeNativeBase"
+  "name": "CalendarApp",
+  "displayName": "CalendarApp"
 }
