--- a/ios/CalendarApp.xcodeproj/xcshareddata/xcschemes/CalendarApp.xcscheme
+++ b/ios/CalendarApp.xcodeproj/xcshareddata/xcschemes/CalendarApp.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "AwesomeNativeBase.app"
-               BlueprintName = "AwesomeNativeBase"
-               ReferencedContainer = "container:AwesomeNativeBase.xcodeproj">
+               BuildableName = "CalendarApp.app"
+               BlueprintName = "CalendarApp"
+               ReferencedContainer = "container:CalendarApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "AwesomeNativeBaseTests.xctest"
-               BlueprintName = "AwesomeNativeBaseTests"
-               ReferencedContainer = "container:AwesomeNativeBase.xcodeproj">
+               BuildableName = "CalendarAppTests.xctest"
+               BlueprintName = "CalendarAppTests"
+               ReferencedContainer = "container:CalendarApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "AwesomeNativeBaseTests.xctest"
-               BlueprintName = "AwesomeNativeBaseTests"
-               ReferencedContainer = "container:AwesomeNativeBase.xcodeproj">
+               BuildableName = "CalendarAppTests.xctest"
+               BlueprintName = "CalendarAppTests"
+               ReferencedContainer = "container:CalendarApp.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "AwesomeNativeBase.app"
-            BlueprintName = "AwesomeNativeBase"
-            ReferencedContainer = "container:AwesomeNativeBase.xcodeproj">
+            BuildableName = "CalendarApp.app"
+            BlueprintName = "CalendarApp"
+            ReferencedContainer = "container:CalendarApp.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "AwesomeNativeBase.app"
-            BlueprintName = "AwesomeNativeBase"
-            ReferencedContainer = "container:AwesomeNativeBase.xcodeproj">
+            BuildableName = "CalendarApp.app"
+            BlueprintName = "CalendarApp"
+            ReferencedContainer = "container:CalendarApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "AwesomeNativeBase.app"
-            BlueprintName = "AwesomeNativeBase"
-            ReferencedContainer = "container:AwesomeNativeBase.xcodeproj">
+            BuildableName = "CalendarApp.app"
+            BlueprintName = "CalendarApp"
+            ReferencedContainer = "container:CalendarApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
