--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "0.60.5",
     "react-native-calendar-picker": "^6.0.1",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-modal": "^11.3.1",
     "react-navigation": "^3.11.1",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
